--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	},
 	"private": true,
 	"devDependencies": {
+		"@vuepress/plugin-back-to-top": "^1.4.1",
+		"@vuepress/plugin-google-analytics": "^1.4.1",
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.10.0",
@@ -24,6 +26,10 @@
 		"vuepress-types": "^0.9.0"
 	},
 	"dependencies": {
-		"axios": "^0.19.2"
+		"axios": "^0.19.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^2.5.0",
+		"prettier-config-vuepress": "^1.0.0"
 	}
 }
