--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -15,7 +15,7 @@ body:
       label: Preflight Checklist
       description: Please ensure you've completed all of the following.
       options:
-        - label: I have read and agree to follow the [support disclaimer](https://github.com/Paperback-iOS/app#support-disclaimer).
+        - label: I have read and I agree to follow the [support disclaimer](https://github.com/Paperback-iOS/app#support-disclaimer).
           required: true
         - label: I am sure that my bug has nothing to with third party extensions.
           required: true          
@@ -26,7 +26,7 @@ body:
   - type: dropdown
     id: device-types
     attributes:
-      label: What type of Apple device are you using?
+      label: What type of Apple device have you encountered the bug with?
       multiple: true
       options:
         - All device types
@@ -72,7 +72,7 @@ body:
     id: bug-description
     attributes:
       label: Describe the Bug
-      description: A clear and concise description of the bug you encountered. Tell us what did you expect to happen?
+      description: A clear and concise description of the bug that you encountered. Tell us what you expected to happen?
       placeholder: Tell us what you see!
     validations:
       required: true
@@ -87,7 +87,7 @@ body:
   - type: textarea
     id: extra-info
     attributes:
-      label: Anything else?
+      label: Anything Else?
       description: |
         Links? References? Anything that will give us more context about the bug you are encountering!
 
