--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,4 +9,4 @@ contact_links:
     about: Check to make sure there is not an issues already open that is related to your issue.
   - name: The Official Discord
     url: https://discord.com/invite/Paperback
-    about: For quick support from the community (use the \#support channel).
+    about: For quick support from the community (use the #support channel).
