--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -9,4 +9,4 @@ contact_links:
     about: Check to make sure there is not an issues already open that is related to your issue.
   - name: The Official Discord
     url: https://discord.com/invite/Paperback
-    about: "For quick support from the community (use the [#support](https://discord.com/channels/673606787290759230/1082865643981901845) channel)."
+    about: "For quick support from the community (use the #support channel)."
